--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 							<article id="Intro">
 								<h2 class="major">หวานฮีลใจ</h2>
 								<span class="image main"><img src="images/Chisanu.png" alt="" /></span>
-								<p>เราอยากให้ร้านของเราเป็นที่ฮีลใจของพวกคุณ โดยมีเหล่าขนมหวานที่่คอยช่วยให้คุณทิ้งเรื่องราวแย่ที่คุณเจอ รวมถึงความหิวด้วย!!!</p>
+								<p>เราอยากให้ร้านของเราเป็นที่ฮีลใจของพวกคุณ โดยมีเหล่าขนมหวานที่่คอยช่วยให้คุณทิ้งเรื่องราวแย่ที่คุณเจอ รวมถึงความหิวด้วย</p>
 								<p>ทางร้านของเรามีบรรยากาศแสนสวยงามที่ทำให้พวกคุณได้พบความสุขของการกินขนมหวานที่อร่อย</p>
 							</article>
 
