--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 
 						<!-- Intro -->
 							<article id="Intro">
-								<h2 class="major">หวานฮีลใจ</h2>
+								<h2 class="major">Whanhealthjai</h2>
 								<span class="image main"><img src="images/Chisanu.png" alt="" /></span>
-								<p>เราอยากให้ร้านของเราเป็นที่ฮีลใจของพวกคุณ </p>
-								<p>ทางร้านของเรามีบรรยากาศแสนสวยงาม</p>
+								<p>We have a sweet </p>
+								<p>It make you to happy</p>
 							</article>
 
 						<!-- Work -->
