--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
 					<div id="main">
 
 						<!-- Intro -->
-							<article id="Intro">
+							<article id="intro">
 								<h2 class="major">Whanhealthjai</h2>
 								<span class="image main"><img src="images/Chisanu.png" alt="" /></span>
-								<p>We have a sweet </p>
+								<p>We have a sweet</p>
 								<p>It make you to happy</p>
 							</article>
 
