--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 						<!-- Intro -->
 							<article id="intro">
-								<h2 class="major">Whanhealthjai</h2>
+								<h2 class="major">Market</h2>
 								<span class="image main"><img src="images/Chisanu.png" alt="" /></span>
 								<p>We have a sweet</p>
 								<p>It make you to happy</p>
