--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/Whan.png" alt="" /></span>
+								<span class="image main"><img src="images/Chisanu.png" alt="" /></span>
 								<p>งานที่ได้รับมอบหมาย</p>
 								<p><a href="https://chisanu33709.github.io/work/">ส่งงาน ครั้งที่1</a></p>
 								<p><a href="https://chisanu33709.github.io/work/work02/">ส่งงาน ครั้งที่2</a></p>
